# md410_2021_conv_website

./: config.toml  pyproject.toml
content/: _index.md  index.md
content/accommodation/: _index.md
content/committee/: _index.md
content/events/: banquet.md  banquet_drinks.md  breakfast.md  cabinet_meetings.md  committee_of_the_whole.md  council_dinner.md  council_meeting.md  council_meeting_lunch.md  dge_training.md  dinner_for_trainees.md  golf.md  informal_discussion.md  international_guest.md  lunch.md  md_convention.md  md_convention_resumption.md  mjf_lunch.md  nightcap.md  pdgs_breakfast.md  rlli_thursday.md  rlli_tuesday.md  rlli_wednesday.md  service_project.md  sharks_board_tour.md  sight_seeing.md  theme_evening.md  thursday_social.md  training.md  vdg_training.md
content/full_stats/: _index.md
content/guest/: _index.md
content/news/: _index.md  cancellation.md  cc_thanks.md  covid_19_01.md  covid_19_02.md  launch_poster.md  newsletter_02.md  newsletter_03.md  postponement.md
content/program/: _index.md
content/registration/: _index.html  success.md
content/registration_result/: _index.md
content/registrees/: _index.md
content/reports/: _index.md
content/rlli/: _index.md
content/stats/: _index.md
content/theme/: _index.md
content/venue/: _index.md
content/virtual_conf_stats/: _index.md
raw/: build.sh
raw/events/: banquet.txt  banquet_drinks.txt  breakfast.txt  breakfast_friday.txt  breakfast_saturday.txt  breakfast_sunday.txt  build_events.py  cabinet_meetings.txt  committee_of_the_whole.txt  council_dinner.txt  golf.txt  (+33 more)
(+15 files in other folders)
